Modernize build & rebrand
Drop support for Spigot/Paper/Bungee as we don't need them

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,9 @@
-# Testing
-ip-whitelist/
-
 # IntelliJ
 .idea/
-build/
 *.iml
 
 # Gradle
 .gradle/
-gradle/
-gradlew
-gradlew.bat
 
-libs/
-
+build/
+run/
